<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.manuel1n1.apps.fragmets.CharacterListFragment"
        android:label="@string/characters_list_fragment"
        tools:layout="@layout/fragment_character_list">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.manuel1n1.apps.fragmets.CharacterDetailsFragment"
        android:label="@string/about_it_fragment"
        tools:layout="@layout/fragment_second">

        <argument
            android:name="characterItem"
            app:argType="com.manuel1n1.apps.data.characterDetails.Character" />
        <action
            android:id="@+id/action_SecondFragment_to_ComicsFragment"
            app:destination="@id/ComicsFragment" />
    </fragment>

    <fragment
        android:id="@+id/ComicsFragment"
        android:name="com.manuel1n1.apps.fragmets.ComicsFragment"
        android:label="@string/comics">

        <argument
            android:name="idCharacter"
            app:argType="integer" />
    </fragment>
</navigation>