<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="clickListener"
            type="android.view.View.OnClickListener"/>
        <variable
            name="character"
            type="com.manuel1n1.apps.data.characterDetails.Character"/>
    </data>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            tools:context=".fragmets.CharacterDetailsFragment">

            <ImageView
                android:id="@+id/character_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="fitCenter"
                app:imageFromUrl="@{character.thumbnail.urlImage}"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{character.name}"
                android:textSize="36sp"
                android:layout_margin="8dp"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                tools:text="Iron Man" />

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{character.getDescriptionText}"
                android:textSize="18sp"
                android:layout_margin="8dp"
                android:textAlignment="viewStart"
                tools:text="Lorem ipsum dolor sit amet,
            consectetur adipiscing elit,
            sed do eiusmod tempor incididunt
            ut labore et dolore magna aliqua." />

            <LinearLayout
                android:id="@+id/comic_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp">

                <TextView
                    style="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comics"
                    android:textAlignment="viewStart"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="Comics" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{character.comics.getComicText}"
                    android:textAlignment="viewStart"
                    android:textSize="24sp"
                    tools:text="Comics" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_baseline_keyboard_arrow_right_24"
                    tools:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp">

                <TextView
                    style="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/series"
                    android:textAlignment="viewStart"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="Series" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{character.series.getSeriesText}"
                    android:textAlignment="viewStart"
                    android:textSize="24sp"
                    tools:text="Series" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp">

                <TextView
                    style="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stories"
                    android:textAlignment="viewStart"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="Stories" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{character.stories.getStoriesText}"
                    android:textAlignment="viewStart"
                    android:textSize="24sp"
                    tools:text="Series" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp">

                <TextView
                    style="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/events"
                    android:textAlignment="viewStart"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="Events" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{character.events.getEventsText}"
                    android:textAlignment="viewStart"
                    android:textSize="24sp"
                    tools:text="Events" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</layout>